--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -91,6 +91,13 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  transition: 0.3s all ease-out;
+  
+  &:hover {
+    transform: scale(1.01);
+    cursor: pointer;
+    box-shadow: 0 0 0.3rem 0.3rem var(--color-pale-blue);
+  }
 
   &:not(:nth-child(1)) {
     padding: var(--default-padding);
